# configurations_toolkit

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml  run.py
cli/: __init__.py  parser.py  utils.py
config/: __init__.py  config_definitions.yaml
database/: __init__.py  access_schema.sql  config_manager.py  config_schema.sql  config_schema.sql.backup
formatters/: __init__.py  access_excel_formatter.py  config_excel_formatter.py
managers/: __init__.py  access_import.py  access_manager.py  inheritance_manager.py  update_manager.py
parsers/: __init__.py  word_parser.py
reports/: __init__.py  compliance_reports.py
scripts/: create_audit_template.py
templates/: audit_completion_memo.docx
tests/: __init__.py  test_config_manager.py
