[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configurations_toolkit"
version = "0.1.0"
description = "Manage system configurations with inheritance for clinic onboarding"
readme = "CLAUDE.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Propel Health", email = "dev@propelhealth.com"}
]
dependencies = [
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
config-toolkit = "configurations_toolkit.run:main"

[tool.setuptools]
# The package is the directory itself (configurations_toolkit/)
py-modules = []

[tool.setuptools.packages.find]
where = [".."]
include = ["configurations_toolkit", "configurations_toolkit.*"]

[tool.setuptools.package-data]
"configurations_toolkit.config" = ["*.yaml"]
"configurations_toolkit.database" = ["*.sql"]
